crates/toml/tests/snapshots/invalid/array/no-close-04.stderr
TOML parse error at line 1, column 26
  |
1 | no-close-04 = [{ key = 42
  |                          ^
unclosed inline table, expected `}`

---
TOML parse error at line 1, column 26
  |
1 | no-close-04 = [{ key = 42
  |                          ^
unclosed array, expected `]`
